Visibility hidden, preventing cls

--- a/src/main.css
+++ b/src/main.css
@@ -53,7 +53,7 @@ html:has(div[class^="index-module_masonryContainer"]) {
 
 html:has(div[class^="index-module_homeContent"]) {
 	footer {
-		display: none;
+		visibility: hidden;
 	}
 }
 
